# Gringotts

./: .gitignore  notes
ethereum/: hardhat.config.ts  package-lock.json  package.json
ethereum/contracts/: ChainTransfer.sol  Events.sol  Gringotts.sol  LayerZeroMessenger.sol  Market.sol  Message.sol  Peer.sol  TestTron.sol  Types.sol  Vault.sol
ethereum/scripts/: bridge.ts  deploy-prod.ts  deploy.ts  test_solana.ts  token.ts  token_abi.ts  tron.ts
ethereum/test/: transfer.ts
oracle/: .env.sample  Makefile  go.mod  go.sum  main.go  routes.go
oracle/blockchain/: evm.go  sol.go
oracle/config/: blockchains.json  config.go  config.json  solana.json  solana_accounts.json  tokens.json
oracle/connection/: GringottsEVM.go  GringottsSOL.go
oracle/handlers/: networks.go  (+3 more)
solana/: Anchor.toml  Cargo.toml  package.json
solana/programs/gringotts/: Cargo.toml
solana/programs/gringotts/src/: concepts  constants.rs  lib.rs  msg_codec.rs
solana/programs/gringotts/src/instructions/: account_destroy.rs  bridge.rs  destroy.rs  estimate.rs  estimate_impl.rs  gringotts_initialize.rs  gringotts_update.rs  initialize.rs  lz_receive.rs  lz_receive_types.rs  mod.rs  peer_add.rs  peer_update.rs  test.rs  token_fund.rs  token_withdraw.rs  vault_withdraw.rs
solana/programs/gringotts/src/state/: events.rs  gringotts.rs  mod.rs  order.rs  peer.rs
solana/programs/gringotts/src/utils/: constant.rs  lz_helper.rs  mod.rs  numbers.rs
solana/scripts/: bridge-prod.ts  bridge.ts  estimate.ts  get_price.ts  init-prod.ts  init.ts  withdraw.ts
solana/tests/: assets.ts  initialize.ts
(+22 files in other folders)
