[package]
name = "gringotts"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "gringotts"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
pyth-solana-receiver-sdk = "0.3.2"
oapp = { git = "https://github.com/alimohammad1995/LayerZero-v2.git", branch = "main" }
#oapp = { path = "../../../../../Temp/MyLayerZero/LayerZero-v2/packages/layerzero-v2/solana/programs/libs/oapp" }
